Fix home height on mobile

--- a/docs-v2/src/templates/home.css
+++ b/docs-v2/src/templates/home.css
@@ -61,6 +61,7 @@
 
 @media screen and (max-width: 568px) {
   .home-wrapper {
+    min-height: auto;
     align-items: start;
     margin: 3rem 0 0;
   }
